--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -3,10 +3,10 @@ name: Hello world workflow
 on:
   push:
 	branches:
-	  - master
+	  - 'master'
   pull_request:
 	branches:
-	  - master
+	  - 'master'
   workflow_dispatch:
 
 jobs:
