--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -11,5 +11,5 @@ jobs:
   runs-on: ubuntu-latest
   steps:
 	- name: print-hello
-	  run: echo "Hello Developers!"
+	  run: echo 'Hello Developers!'
 	  shell: bash
