--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -10,6 +10,6 @@ on:
 jobs:
   runs-on: ubuntu-latest
   steps:
-	- name: print-hello
+	- name: print hello
 	  run: echo 'Hello Developers!'
 	  shell: bash
