--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -8,9 +8,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
-    - name: print hello
-      run: echo 'Hello Developers!'
-      shell: bash
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print hello
+        run: echo 'Hello Developers!'
+        shell: bash
 
