--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -12,7 +12,7 @@ jobs:
   list-files:
     runs-on: ubuntu-latest
     steps:
-    	- uses: actions/checkout@v2
-      - name: list files
+      - uses: actions/checkout@v2
+      - name: list-files
         run: ls -al
         shell: bash
