--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -13,6 +13,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: list-files
+      - name: list files
         run: ls -al
         shell: bash
+
+  print-hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print hello
+        run: echo 'Hello Developers!'
+        shell: bash
+
