--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -1,4 +1,5 @@
 name: print-hello
+run-name: ${{ github.actor }} is running on sh
 on:
   push:
     branches:
@@ -14,16 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: list files
-        run: ls -al
-        shell: bash
-  
-  run-later:
-    runs-on: ubuntu-latest
-    needs: ['list-files']
-    steps:
-      - uses: actions/checkout@v2
-        name: pull repository
-      - name: list files
-        run: echo "Run at last"
-        shell: bash
+        run: echo "$SHELL""
+        shell: sh
 
