--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -16,5 +16,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: list files
         run: echo "Hi""
-        shell: sh
+        shell: bash
 
