--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -1,20 +1,20 @@
-name: print-hello
-run-name: ${{ github.actor }} is running on sh
-on:
-  push:
-    branches:
-      - 'master'
-  pull_request:
-    branches:
-      - 'master'
-  workflow_dispatch:
+# name: print-hello
+# run-name: ${{ github.actor }} is running on sh
+# on:
+#   push:
+#     branches:
+#       - 'master'
+#   pull_request:
+#     branches:
+#       - 'master'
+#   workflow_dispatch:
 
-jobs:
-  list-files:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: list files
-        run: echo "Hi"
-        shell: bash
+# jobs:
+#   list-files:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: list files
+#         run: echo "Hi"
+#         shell: bash
 
