--- a/.github/workflows/second.yaml
+++ b/.github/workflows/second.yaml
@@ -8,10 +8,10 @@ on:
   workflow_dispatch:
 
 jobs:
-  check-seonc:
+  check-seond:
     runs-on: ubuntu-lastest
     steps:
       - run: ls
+      - uses: actions/checkout@v4
       - name: checkout
-        uses: actions/checkout@v4
-      - run: ls
+        run: ls -al
